# homestream

./: .env.example  .gitignore  .pre-commit-config.yaml  A2A_PROTOCOL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GOVERNANCE.md  HARDWARE_GUIDE.md  INSTALL_CN.md  IP_PRE_DEV_ASSESSMENT.md  IP_QWEN_PROVIDER_ASSESSMENT.md  IP_RISK_ASSESSMENT.md  LAUNCH_SURF_RESEARCH.md  LICENSE  NOTICE  OPENSCIENCE_RESEARCH.md  README.md  README_EN.md  RELEASE_NOTES_v5.0.0.md  RELEASE_NOTES_v5.1.0.md  SECURITY.md  TECH_SOVEREIGNTY_ASSESSMENT.md  TRADEMARK.md  TRADEMARK_FILING.md  UNIVERSAL_INTERFACE_P0_DESIGN.md  UNIVERSAL_INTERFACE_P1_DESIGN.md  UNIVERSAL_INTERFACE_RESEARCH.md  actions.py  agent_card.py  arch_visualizer.py  bookhouse_client.py  bridge_v7_adapter.py  bridge_v7_server.py  causal_memory.py  condition_verifier.py  config.py  conftest.py  coverage_report.txt  (+94 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yml  security.yml  sync-to-gitee.yml  test-backend.yml
assets/: mobile.css
docs/: CosyVoice2增强方案-20260714.md  DIMENSION_INTERFACE_SPEC.md  ECOSYSTEM_3D_ARCHITECTURE.md  INSPIRATION_LOG.md  MEMORY_PHILOSOPHY.md  RELEASE-v5.2.5.md  ai-coding-resources.md  theme-manifest-spec.md  专项学习-语音交互后端与端到端语音模型调研-20260714.md  专项学习-语音交互模块与Skill技能商店-20260713.md  多轮对话断流修复验证报告-20260714.md  语音STT对比-融优评估.md  语音云对接说明.md  语音链路端到端验证报告-20260714.md
openbridge/: cli.py
outputs/: jobs.json  run.json  runs.json
outputs/logs/: 0_pre-commit.txt
outputs/logs/pre-commit/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Run pip install pre-commit.txt  5_Run pre-commit run --all-files.txt  system.txt
outputs/logs2/: 0_pre-commit.txt
outputs/logs2/pre-commit/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Run pip install pre-commit.txt  5_Run pre-commit run --all-files.txt  system.txt
outputs/logs3/: 0_test.txt
outputs/logs3/test/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install dependencies.txt  5_Run tests with coverage.txt  6_Upload coverage artifact.txt  system.txt
outputs/logs4/: 0_test.txt
outputs/logs4/test/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install dependencies.txt  5_Run tests with coverage.txt  6_Upload coverage artifact.txt  system.txt
outputs/logs5/: 0_test.txt
outputs/logs5/test/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install dependencies.txt  5_Run tests with coverage.txt  6_Upload coverage artifact.txt  system.txt
outputs/logs6/: 0_pre-commit.txt
outputs/logs6/pre-commit/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Run pip install pre-commit.txt  5_Run pre-commit run --all-files.txt  system.txt
outputs/logs7/: 0_pre-commit.txt
outputs/logs7/pre-commit/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Run pip install pre-commit.txt  5_Run pre-commit run --all-files.txt  system.txt
outputs/logs8/: 0_pre-commit.txt
outputs/logs8/pre-commit/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Run pip install pre-commit.txt  5_Run pre-commit run --all-files.txt  system.txt
prompts/: README.md
prompts/condition_verifier/: README.md  v1_0.md
prompts/icp_parser/: README.md  v1_0.md
prompts/skill_router/: README.md  v1_0.md
providers/: __init__.py  base_provider.py  deepseek_provider.py  glm_provider.py  llama_cpp_provider.py  ocr_provider.py  ollama_provider.py  qwen_provider.py  stt_provider.py  tts_provider.py  vision_provider.py
skills/bad-example/: SKILL.md
skills/code-reviewer/: SKILL.md
themes/aurora-dark/: theme.css  theme.json
themes/claymorphism/: theme.css  theme.json
themes/cyberpunk-neon/: theme.css  theme.json
themes/ink-wash/: theme.css  theme.json
themes/liquid-glass/: theme.css  theme.json
themes/neubrutalism/: theme.css  theme.json
themes/pixel-retro/: theme.css  theme.json
themes/terminal-green/: theme.css  theme.json
themes/zen-minimal/: theme.css  theme.json
voice/: README.md  agent.py  bench_stt_cn.py  bench_stt_cn_result.json  browser_demo_server.py  cloud_stt_adapter.py  cloud_tts_adapter.py  config.py  cosyvoice_requirements.txt  cosyvoice_service.py  docker-compose.yml  funasr-hotwords.txt  install_cosyvoice_env.ps1  install_cosyvoice_phase3.ps1  link-and-start.sh  livekit.yaml  llm_adapter.py  predownload_funasr_models.py  setup_cosyvoice_phase2.ps1  start_cosyvoice_service.bat  stt_adapter.py  test_cosyvoice_service.py  tts_adapter.py
voice/browser_demo/: index.html  livekit-client.umd.min.js
