# pyproject.toml — HomeStream v5.0 PyPI包配置
# 开源版：MIT许可证 + 弹性模式 + ICP协议 + 双保障 + 自进化生态

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homestream"
version = "5.0.0"
description = "A self-evolving AI ecosystem — elastic mode + ICP protocol + dual redundancy"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "HomeStream Contributors"},
]
keywords = [
    "ai-agent", "multi-agent", "event-stream", "fastapi",
    "icp-protocol", "dual-redundancy", "elastic-mode",
    "ai-ecosystem", "self-evolving", "homestream",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # 核心框架
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    # 可观测性
    "structlog>=24.0.0",
    "prometheus-client>=0.18.0",
    # HTTP客户端
    "requests>=2.31.0",
    # CLI — Typer+Rich
    "typer>=0.22.0",
    "rich>=13.0.0",
    # 系统信息
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Ninefoldatwill/HomeStream"
Repository = "https://github.com/Ninefoldatwill/HomeStream"
Documentation = "https://github.com/Ninefoldatwill/HomeStream#readme"
"Bug Tracker" = "https://github.com/Ninefoldatwill/HomeStream/issues"
"Changelog" = "https://github.com/Ninefoldatwill/HomeStream/releases"

[project.scripts]
homestream = "openbridge.cli:app"

# ============================================================
# 打包配置
# ============================================================

[tool.setuptools]
packages = ["openbridge", "providers", "prompts"]
py-modules = [
    "bridge_v7_server",
    "bridge_v7_adapter",
    "event_stream",
    "event_store",
    "actions",
    "observations",
    "condition_verifier",
    "ws_manager",
    "skill_router",
    "skill_router_v2",
    "worktree_manager",
    "worktree_subscribers",
    "config",
    "model_router",
    "modes",
    "hardware_profile",
    "group_chat",
    "logging_config",
    "log_sanitizer",
    "middleware",
    "prompt_security",
    "ratchet_loop",
    "experiment_archiver",
]

[tool.setuptools.package-dir]
openbridge = "openbridge"
providers = "providers"
prompts = "prompts"

[tool.setuptools.package-data]
prompts = ["**/*"]
providers = ["**/*"]

# ============================================================
# 工具配置（保留原有）
# ============================================================

[tool.pytest.ini_options]
testpaths = ["."]
norecursedirs = ["worktrees", ".pytest_tmp", "__pycache__", ".git", "build", "dist"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "test_*",
    "worktrees/*",
    "*/__pycache__/*",
    "openbridge/cli.py",
    "openbridge/__init__.py",
    "openbridge/__main__.py",
    "bookhouse_client.py",
    # Optional providers requiring external services
    "providers/ocr_provider.py",
    "providers/stt_provider.py",
    "providers/tts_provider.py",
    "providers/vision_provider.py",
]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["worktrees", "__pycache__", ".pytest_cache"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (安全规则)
]
ignore = [
    "E501",  # 行长度由ruff-format管理
    "S101",  # 允许assert（测试用）
    "S104",  # 允许0.0.0.0绑定
    "S108",  # 允许/tmp路径
    "B008",  # FastAPI默认参数模式
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S105", "S106", "S311"]

[tool.bandit]
exclude_dirs = ["tests", "worktrees", "__pycache__"]
skips = ["B101", "B311"]
